Use sorted structures where possible